diesel_compile_tests/tests/fail/derive/bad_aggregate.stderr
error: expected `,`
 --> $DIR/bad_aggregate.rs:6:20
  |
6 | #[diesel(aggregate = true)]
  |                    ^
